--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,28 +1,30 @@
+h1, h2, h3, p{
+  font-family: Helvetica;
+}
+
+h1, h2, h3{
+  font-weight: bold;
+}
 
 header{
   background-image: url(/Users/meagan/Desktop/Projects/Dasmoto/resources/images/pattern.jpeg);
 }
 
 h1{
-  font-family: Helvetica;
   font-size: 100px;
   color: khaki;
-  font-weight: bold;
   text-align: center;
   padding: 10px;
 }
 
-h3{
-  font-family:Helvetica;
+h2{
   font-size: 32px;
-  font-weight: bold;
   color: white;
 }
 
-p{
-  font-family: Helvetica;
+h3{
+  font-size: 20px;
 }
-
 .brushes{
   background-color: mediumspringgreen;
 }
@@ -33,10 +35,4 @@ p{
 
 .paint{
   background-color: skyblue;
-}
-
-h4{
-  font-weight: bold;
-  font-family: Helvetica;
-  font-size: 20px;
 }
